Added ears of the batman

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <div class="left-cheek-curve"></div>
       <div class="right-cheek-curve"></div>
       <div class="chin-curve"></div>
+      <!-- ears of the batman -->
+      <div class="left-ear"></div>
+      <div class="right-ear"></div>
     </div>
   </body>
 </html>
