--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       <!-- ears of the batman -->
       <div class="left-ear"></div>
       <div class="right-ear"></div>
+      <!-- mouth of the batman -->
+      <div class="mouth-shape">
+        <div class="lips"></div>
+        <!-- added to the left and right of the mouth to correct the border-radius -->
+        <div class="left-lip-correct"></div>
+        <div class="right-lip-correct"></div>
+      </div>
     </div>
   </body>
 </html>
