Added eye shape

--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
       <!-- ears of the batman -->
       <div class="left-ear"></div>
       <div class="right-ear"></div>
+      <!-- the eyes of the batman -->
+      <div class="left-eye">
+        <div class="left-eye-top"></div>
+        <div class="left-eye-right"></div>
+        <div class="left-eye-left"></div>
+        <div class="left-eye-fill"></div>
+        <div class="left-eye-gap"></div>
+      </div>
+      <div class="right-eye">
+        <div class="right-eye-top"></div>
+        <div class="right-eye-right"></div>
+        <div class="right-eye-left"></div>
+        <div class="right-eye-fill"></div>
+        <div class="right-eye-gap"></div>
+      </div>
       <!-- mouth of the batman -->
       <div class="mouth-shape">
         <div class="lips"></div>
