Added eye shape and eye balls

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="left-eye-left"></div>
         <div class="left-eye-fill"></div>
         <div class="left-eye-gap"></div>
+        <div class="left-eye-shape">
+          <div class="left-eye-ball"></div>
+        </div>
       </div>
       <div class="right-eye">
         <div class="right-eye-top"></div>
@@ -32,6 +35,9 @@
         <div class="right-eye-left"></div>
         <div class="right-eye-fill"></div>
         <div class="right-eye-gap"></div>
+        <div class="right-eye-shape">
+          <div class="right-eye-ball"></div>
+        </div>
       </div>
       <!-- mouth of the batman -->
       <div class="mouth-shape">
