--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1 class="title">BATMAN!BATMAN!BATMAN!BATMAN!</h1>
     <!-- the round-edged square face of the batman -->
     <div class="face-cut">
       <div class="head-curve"></div>
